New Degiro CSV version

--- a/src/i18n/cs-CZ.json
+++ b/src/i18n/cs-CZ.json
@@ -6,7 +6,7 @@
 	"time": "Time",
 	"product": "Product",
 	"isin": "ISIN",
-	"exchangeReference": "Exchange",
+	"referenceExchange": "Exchange",
 	"venue": "Venue",
 	"quantity": "Quantity",
 	"price": "Price",
